--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,11 @@
 form {
   min-width: 300px;
 }
+
+header {
+  height: 5.1875rem;
+}
+
+a.button.active {
+  border: 1px solid var(--fore-color);
+}
