--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,17 @@ header {
 a.button.active {
   border: 1px solid var(--fore-color);
 }
+
+html,
+body,
+#root,
+.container,
+.center-page {
+  height: 100%;
+}
+
+.center-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
